day3/lab15/cmd/g-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-https-redirect
  namespace: grafana
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: grafana-grafana-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: grafana.app.stuXX.steven.asia # 🔁 Replace stuXX
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
  tls:
  - hosts:
    - grafana.app.stuXX.steven.asia # 🔁 Replace stuXX
    secretName: grafana-tls
